# sick-memory

./: .am-p3-test  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  admin_test.go  bridge_test.go  build.sh  cargo_version_test.go  cloud_api_test.go  config_main_test.go  config_test.go  delete_main_test.go  delete_test.go  edit_main_test.go  edit_test.go  go.mod  help_test.go  init_test.go  list_test.go  main.go  main_test.go  recall_main_test.go  recall_test.go  remember_test.go  response_test.go  search_index_test.go  status_test.go  timestamp_test.go  version_test.go
.claude/: CLAUDE.md
.devin/: config.json  debri-prompt-1781707439773.txt  debri-prompt-1781707439788.txt  debri-prompt-1781707439802.txt  debri-prompt-1781707850969.txt  debri-prompt-1781823247916.txt  debri-prompt-1781823247930.txt  debri-prompt-1781823247944.txt
docs/: architecture.md  changelog-2026-05-product.md  changelog-2026-05.html  changelog.html  commands.md  index.html
scripts/: test-am-cloud.sh
src/: lib.rs
