[package]
name = "sick-memory"
version = "0.1.0"
edition = "2021"
description = "File-based memory system for AI coding agents"
readme = "README.md"
homepage = "https://github.com/javimosch/sick-memory"
license = "MIT"
repository = "https://github.com/javimosch/sick-memory"
keywords = ["memory", "agent", "cli", "git", "worktree"]
categories = ["command-line-utilities", "development-tools"]
