[package]
name = "sick-memory"
version = "0.1.0"
edition = "2021"
description = "File-based memory system for AI coding agents"
readme = "README.md"
rust-version = "1.56"
homepage = "https://github.com/javimosch/sick-memory"
license = "MIT"
repository = "https://github.com/javimosch/sick-memory"
keywords = ["memory", "agent", "cli", "git", "worktree"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude",
    ".copilot",
    ".devin",
    ".opencode",
    ".am-summary",
    "*.go",
    "go.mod",
    "build.sh",
    "*_test.go",
    "docs",
    ".gitignore",
    ".github",
    "AGENTS.md",
]
